--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,11 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-family: Oswald;
 }
 
 h1,
@@ -35,4 +40,273 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+fieldset {
+  border: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+} 
+
+.content {
+  display: flex;
+  align-items: end;
+
+  width: 1140px;
+}
+
+.result {
+  margin: 78px 30px 0 0;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+
+  position: relative;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.search-form {
+  margin-top: 16px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+}
+
+.search-form__label {
+  margin-top: 5px;
+
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-form__fieldset {
+  width: fit-content;
+}
+
+.search-form__fieldset-title {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+}
+
+.search-form__textfield {
+  appearance: none;
+
+  padding: 2.5px 14px 2.5px 0;
+
+  width: 225px;
+  height: 27px;
+
+  background-color: transparent;
+
+  border: 0;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+  color: #fff;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+}
+
+.search-form__checkbox-list {
+  margin-bottom: 5px;
+
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.search-form__pseudo-checkbox {
+  margin-right: 5px;
+
+  width: 19px;
+  height: 19px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+
+  width: 15px;
+  height: 15px;
+
+  background-color: #fff;
+
+  opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__label-text:hover {
+  text-decoration: underline;
+}
+
+.button {
+  border: 1px solid white;
+  
+  background-color: transparent;
+  
+  cursor: pointer;
+
+  font-family: "Fira Sans Condensed";
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21.6px;
+  text-align: center;
+  color: #fff
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.search-form__submit-button {
+  width: 194px;
+  height: 34px;
+}
+
+.more-button {
+  margin-top: auto;
+
+  width: 100%;
+  height: 34px;
+}
+
+.title {
+  margin-bottom: 26px;
+
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 70.5px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050
+}
+
+.content__list {
+  height: 298px;
+
+  position: relative;
+
+  overflow: scroll;
+}
+
+.content__details {
+  width: 100%;
+  height: 100%;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+  padding: 2px;
+}
+
+/* Templates */
+
+.cards-list-item-template:focus {
+  outline: none;
+}
+
+.cards-list-item-template:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+
+  padding-bottom: 2px;
+}
+
+.content__video-card-title {
+  margin-bottom: 6px;
+
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
 }
