--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ fieldset {
 .result__video {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .search-form {
@@ -246,7 +246,7 @@ fieldset {
 
   position: relative;
 
-  overflow: scroll;
+  overflow: auto;
 }
 
 .content__details {
