--- a/styles/style.css
+++ b/styles/style.css
@@ -221,7 +221,6 @@ fieldset {
 
 .search-form__submit-button {
   width: 194px;
-  height: 34px;
 }
 
 .more-button {
@@ -264,16 +263,15 @@ fieldset {
 
 /* Templates */
 
-.cards-list-item:focus {
+.content__card-link:focus {
   outline: none;
 }
 
-.cards-list-item:focus-visible {
+.content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
 
-.content__list-item:hover .content__video-card-title,
-.content__list-item:hover .content__video-card-description {
+.content__card-link:hover {
   text-decoration: underline;
 }
 
@@ -281,7 +279,7 @@ fieldset {
   margin-bottom: 30px;
 }
 
-.content__list-item:active {
+.content__card-link:active {
   background-color: #545050;
 }
 
@@ -310,7 +308,8 @@ fieldset {
 .content__video-card-title {
   margin-bottom: 6px;
 
-  max-width: 100%;
+  inline-size: 100%;
+  max-inline-size: 195px;
 
   overflow: hidden;
   white-space: nowrap;
